--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,31 @@
 .hidden-slideshow{
   display: none;
 }
+
+.page-content {
+    position: relative;
+    width: 100%;
+}
+
+.title-text{
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 120px;
+}
+
+.title-wrapper{
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  margin-right: -4px;
+  vertical-align: top;
+}
+
+.text-wrapper{
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  margin-right: -4px;
+  vertical-align: top;
+}
