--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body{
+    background: #000;
+}
+
 .app{
   height:100%;
   width:100%;
@@ -8,32 +12,4 @@
 }
 .hidden-slideshow{
   display: none;
-}
-
-.page-content {
-    position: relative;
-    width: 100%;
-}
-
-.title-text{
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 120px;
-}
-
-.title-wrapper{
-  width: 50%;
-  position: relative;
-  display: inline-block;
-  margin-right: -4px;
-  vertical-align: top;
-}
-
-.text-wrapper{
-  width: 50%;
-  position: relative;
-  display: inline-block;
-  margin-right: -4px;
-  vertical-align: top;
 }
