--- a/src/Apartments.css
+++ b/src/Apartments.css
@@ -1,6 +1,11 @@
 body{
   background: white;
 }
+
+.header-image{
+  height: 100%;
+  width: 100%
+}
 .page-content {
     position: relative;
     width: 100%;
@@ -26,5 +31,44 @@ body{
   position: relative;
   display: inline-block;
   margin-right: -4px;
+  vertical-align: top;
+}
+
+.single-image{
+  text-align: right;
+  padding-left: 5%;
+  padding-right: 5%;
+  box-sizing: border-box;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 120px;
+  }
+
+.images-descriptions{
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 120px;
+}
+
+.container{
+  margin-top: 120px;
+}
+
+.left{
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  margin-right: -4px;
+  vertical-align: top;
+}
+
+.right{
+  width: 50%;
+  position: relative;
+  display: inline-block;
+  margin-right: -4px;
+  margin-left: 6px;
   vertical-align: top;
 }
